force-app/main/default/objects/Product_Related_Entity__c/Product_Related_Entity__c.object-meta.xml
<CustomObject>
    <description>אובייקט לצורך החזרת פרטי עובדים קשורים למוצר מסויים</description>
    <label>Product Related Entities</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>נכלל בביטוח</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Related Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>