force-app/main/default/objects/Product_Related_Entity__c/fields/Addition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Addition_Reason__c</fullName>
    <label>Addition Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>