force-app/main/default/objects/Product_Related_Entity__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Related Entities</relationshipLabel>
    <relationshipName>Product_Related_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>