force-app/main/default/objects/Product_Related_Entity__c/fields/Company_Hp__c.field-meta.xml
<CustomField>
    <fullName>Company_Hp__c</fullName>
    <label>Company Hp</label>
    <length>15</length>
    <type>Text</type>
</CustomField>