force-app/main/default/objects/Product_Related_Entity__c/fields/Company_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Ownership_Type__c</fullName>
    <label>Company Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>