force-app/main/default/objects/Product_Related_Entity__c/fields/Country_Of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Registration__c</fullName>
    <label>Country Of Registration</label>
    <length>150</length>
    <type>Text</type>
</CustomField>