force-app/main/default/objects/Product_Related_Entity__c/fields/Hasmacha_Year__c.field-meta.xml
<CustomField>
    <fullName>Hasmacha_Year__c</fullName>
    <label>Hasmacha Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>