force-app/main/default/objects/Product_Related_Entity__c/fields/Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Id_Type__c</fullName>
    <label>Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>תעודת זהות</fullName>
                <default>true</default>
                <label>תעודת זהות</label>
            </value>
            <value>
                <fullName>דרכון</fullName>
            </value>
            <value>
                <fullName>תאגיד</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>