force-app/main/default/objects/Product_Related_Entity__c/fields/Insured_Share__c.field-meta.xml
<CustomField>
    <fullName>Insured_Share__c</fullName>
    <label>Insured Share</label>
    <length>5</length>
    <type>Text</type>
</CustomField>