force-app/main/default/objects/Product_Related_Entity__c/fields/Last_Updated_Signature__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Updated Signature</label>
    <referenceTo>doco__Signature__c</referenceTo>
    <relationshipLabel>Product Related Entities</relationshipLabel>
    <relationshipName>Product_Related_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>