force-app/main/default/objects/Product_Related_Entity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Novidea_HPC__Product__c</referenceTo>
    <relationshipName>Product_Related_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>