force-app/main/default/objects/Product_Related_Entity__c/fields/ProductForAccountEntity__c.field-meta.xml
<CustomField>
    <fullName>ProductForAccountEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductForAccountEntity</label>
    <referenceTo>Novidea_HPC__Product__c</referenceTo>
    <relationshipLabel>Product Related Entities (ProductForAccountEntity)</relationshipLabel>
    <relationshipName>Product_Related_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>