force-app/main/default/objects/Product_Related_Entity__c/fields/ProductForContactEntity__c.field-meta.xml
<CustomField>
    <fullName>ProductForContactEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductForContactEntity</label>
    <referenceTo>Novidea_HPC__Product__c</referenceTo>
    <relationshipLabel>Product Related Entities (ProductForContactEntity)</relationshipLabel>
    <relationshipName>Product_Related_EntitiesContacts</relationshipName>
    <type>Lookup</type>
</CustomField>