force-app/main/default/objects/Product_Related_Entity__c/fields/Professional_Degree__c.field-meta.xml
<CustomField>
    <fullName>Professional_Degree__c</fullName>
    <label>Professional Degree</label>
    <length>80</length>
    <type>Text</type>
</CustomField>