force-app/main/default/objects/Product_Related_Entity__c/fields/Ssn__c.field-meta.xml
<CustomField>
    <fullName>Ssn__c</fullName>
    <label>Ssn</label>
    <length>15</length>
    <type>Text</type>
</CustomField>