force-app/main/default/objects/Product_Related_Entity__c/fields/Vetek_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Vetek_In_Years__c</fullName>
    <label>Vetek In Years</label>
    <length>3</length>
    <type>Text</type>
</CustomField>